@@ -2,6 +2,8 @@ package pl.mkn.tdw.features.deliveryeffectivenessassessment.evidence;
 
 import pl.mkn.tdw.features.deliveryeffectivenessassessment.deliveryunit.DeliveryUnit;
 
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -14,7 +16,9 @@ public record DeliveryEvidencePacket(
 ) {
 
     public DeliveryEvidencePacket {
-        artifacts = artifacts != null ? Map.copyOf(artifacts) : Map.of();
+        artifacts = artifacts != null
+                ? Collections.unmodifiableMap(new LinkedHashMap<>(artifacts))
+                : Map.of();
         visibilityLimits = visibilityLimits != null ? List.copyOf(visibilityLimits) : List.of();
     }
 }
